Fixed alignment of text since changed font on Home page

--- a/mystyles.css
+++ b/mystyles.css
@@ -136,9 +136,9 @@ a:hover {
 }
 
 .img-circle-text {
-  margin-left: 700px;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  margin-left: 725px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .img-circle {
@@ -148,8 +148,8 @@ a:hover {
   padding-top: 25px;
   padding-bottom: 25px;
   display: inline-block;
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 350px;
   margin-top: 1px;
   line-height: 14px;
   vertical-align: text-top;
